hphp/hack/test/typecheck/await_in_expressions1.php
<?hh

async function f1(Awaitable<int> $a): Awaitable<void> {
  $x = (await $a) + 1;
}
